setting up embedded mojo page